# RAG-eval-hackathon

./: .gitignore  README.md  evaluating_RAG.ipynb  pyproject.toml
tests/: conftest.py  test_string.py
utils/: mlflow_custom_metrics.py  rag_chain.py
