[project]
name = "RAG-eval-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.2.1",
    "arxiv>=2.1.3",
    "azure-ai-documentintelligence>=1.0.0b4",
    "azure-identity>=1.19.0",
    "chainlit>=1.3.1",
    "datasets>=3.2.0",
    "evaluate>=0.4.3",
    "ipykernel>=6.29.5",
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.3",
    "langchain-openai>=0.2.4",
    "langchain-together>=0.2.0",
    "langchain-unstructured>=0.1.5",
    "langchain>=0.3.5",
    "markdown>=3.7",
    "markdownify>=0.13.1",
    "mlflow[genai]>=2.19.0",
    "ollama>=0.4.4",
    "openai>=1.52.2",
    "pdfminer-six>=20240706",
    "pi-heif>=0.20.0",
    "pillow>=11.0.0",
    "pymupdf>=1.24.13",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "textstat>=0.7.4",
    "tiktoken>=0.8.0",
    "together>=0.2.11",
    "transformers>=4.46.1",
    "unstructured-inference>=0.8.1",
    "unstructured-pytesseract>=0.3.13",
    "unstructured>=0.16.3",
]
